@@ -141,6 +141,10 @@ sub undef {
     my $self = shift;
     $self->{options}->undef(@_);
 }
+sub undefineall {
+    my $self = shift;
+    $self->{options}->undefineall(@_);
+}
 sub define {
     my $self = shift;
     #print "DEFINE @_\n";
@@ -318,6 +322,10 @@ do nothing.
 =item $self->undef(I<defname>)
 
 Called with each `undef.  Defaults to use options object.
+
+=item $self->undefineall()
+
+Called with each `undefineall.  Defaults to use options object.
 
 =item $self->define(I<defname>, I<value>, I<params>)
 
