@@ -65,6 +65,7 @@ public:
     virtual void include(string filename);	// Request a include file be processed
     virtual void define(string name, string value, string params); // `define with parameters
     virtual void undef(string name);		// Remove a definition
+    virtual void undefineall();			///< Remove all non-command-line definitions
     virtual string defParams(string name);	// Return parameter list if define exists
     virtual string defValue(string name);	// Return value of given define (should exist)
     virtual string defSubstitute(string substitute);	///< Return value to substitute for given post-parameter value
@@ -113,10 +114,14 @@ void VPreprocXs::undef(string define) {
     static string holddefine; holddefine = define;
     call(NULL, 1,"undef", holddefine.c_str());
 }
+void VPreprocXs::undefineall() {
+    call(NULL, 0,"undefineall");
+}
 void VPreprocXs::define(string define, string value, string params) {
     static string holddefine; holddefine = define;
     static string holdvalue; holdvalue = value;
     static string holdparams; holdparams = params;
+    // 4th argument is cmdline; always undef from here
     call(NULL, 3,"define", holddefine.c_str(), holdvalue.c_str(), holdparams.c_str());
 }
 string VPreprocXs::defParams(string define) {
